# test2

./: .gitingnore  display_panel.cpp  display_panel.h  guitonFinal.ino  hardware_config.h  mqtt_control.cpp  mqtt_control.h  secrets.h  ui_events.cpp  ui_events.h
libraries/: !lv_conf.h  lv_conf.h
libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_comp_hook.c  ui_events.h  ui_font_Font1.c  ui_helpers.c  ui_helpers.h  ui_img_1259666894.c  ui_img_ac_png.c  ui_img_acoff_png.c  ui_img_dial1_png.c  ui_img_sijalicasm_png.c  ui_img_sv1_png.c  ui_img_sv1b_png.c  ui_img_sv2_png.c  ui_img_sv2b_png.c  ui_img_sv3_png.c  ui_img_sv3b_png.c  ui_img_sv4_png.c  ui_img_sv4b_png.c  ui_img_sv5_png.c  ui_img_sv5b_png.c
