SET(SOURCES ui_Screen1.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_img_1259666894.c
    ui_img_dial1_png.c
    ui_img_sv3b_png.c
    ui_img_sv3_png.c
    ui_img_sv5b_png.c
    ui_img_sv5_png.c
    ui_img_sv4b_png.c
    ui_img_sv4_png.c
    ui_img_sv2b_png.c
    ui_img_sv2_png.c
    ui_img_sv1b_png.c
    ui_img_sv1_png.c
    ui_img_ac_png.c
    ui_img_acoff_png.c
    ui_img_sijalicasm_png.c
    fonts/ui_font_Font1.c)

add_library(ui ${SOURCES})
